Added employeeDetail view and related links

--- a/views/view-employees.ejs
+++ b/views/view-employees.ejs
@@ -31,7 +31,7 @@
                         <td><%= employee.salary %></td>
                         <td><%= employee.role %></td>
                         <td><%= employee.employeeNumber %></td>
-
+                        <td><a href="/employees/<%= employee.employeeNumber %>">View</a></td>
                     </tr>
                 <% }); %>
             </tbody>
