--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,79 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: #575756;
 }
 
 a {
-  color: #00B7FF;
+  text-decoration: none;
+  color: #283583;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: #283583;
+}
+
+nav .logo {
+  width: 100px;
+  height: auto;
+  margin-right: 200px;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  list-style: none;
+}
+
+nav ul li {
+  padding: 0 10px 0 10px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+nav ul li a:hover {
+  color: #61a83f;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 50px;
+}
+
+.footer .logo {
+  width: 100px;
+  height: auto;
+  margin-right: 200px;
+}
+
+.employee-image {
+  display: flex;
+  width: 100px;
+  border-radius: 50%;
+}
+
+.employee-image img {
+  width: 100px;
 }
