--- a/views/employeeDetail.ejs
+++ b/views/employeeDetail.ejs
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Information</title>
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
     <h1>Employee Information</h1>
 
     <% if (employee) { %>
+        
         <table>
             <thead>
                 <tr>
