Added branding to all pages

--- a/views/addEmployee.ejs
+++ b/views/addEmployee.ejs
@@ -36,6 +36,7 @@
   </style>
 </head>
 <body>
+  <%- include('header') %>
   <h1>Add New Employee</h1>
 
   <!-- Display Success Message -->
@@ -110,5 +111,6 @@
   </form>
 
   <a href="/">Back to Home</a>
+  <%- include('footer') %>
 </body>
 </html>
