--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
+    <%- include('header') %>
     <h1>Add New User</h1>
 
     <form action="/users/add" method="post">
@@ -22,5 +23,6 @@
 
         <input type="submit" value="Submit">
     </form> 
+    <%- include('footer') %>
 </body>
 </html>
