--- a/views/deleteUser.ejs
+++ b/views/deleteUser.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
+    <%- include('header') %>
     <h1>Delete User</h1>
 
     <form action="/users/delete/<%= user.id %>" method="post">
@@ -17,5 +18,6 @@
 
         <input type="submit" value="Submit">
     </form> 
+    <%- include('footer') %>
 </body>
 </html>
