--- a/views/addEmployee.ejs
+++ b/views/addEmployee.ejs
@@ -7,10 +7,6 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
   <style>
     /* Basic styling for demonstration purposes */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
     .error {
       color: red;
       margin-bottom: 15px;
@@ -110,7 +106,7 @@
     </div>
   </form>
 
-  <a href="/">Back to Home</a>
+  <a href="/employees">Back to Employees List</a>
   <%- include('footer') %>
 </body>
 </html>
