Nodemon assets issue resolved

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,4 @@
 <div class="footer">
-    <img src="/assets/Kainos 800x250 Logo (Transparent BG).png" alt="Logo" class="logo">
+    <img src="/assets/main-logo.png" alt="Logo" class="logo">
     <p>© Copyright Kainos 2025 Code | Connect | Challenge</p>
 </div>
